fix date range dropdown overflow issue

--- a/src/_scss/pages/search/_collapsibleSidebar.scss
+++ b/src/_scss/pages/search/_collapsibleSidebar.scss
@@ -112,8 +112,11 @@
 
       .categories-list,
       .category-filter {
-        overflow-y: auto;
+        &:not(:has(.time-period)){
+          overflow-y: auto;
+        }
       }
+
     }
 
     .category-filter {
